--- a/templates/login.html
+++ b/templates/login.html
@@ -161,7 +161,7 @@
       </div>
       <div class="cadastroOuLogin">
         <button type="button">Login</button>
-        <a href="/cadastro"><button type="button">Cadastrar</button></a>
+        <a href="{{ url_for('cadastro') }}"><button type="button">Cadastrar</button></a>
       </div>
     </header>
 
