--- a/templates/login.html
+++ b/templates/login.html
@@ -149,6 +149,26 @@
         padding: 8px 10px;
         font-size: 14px;
       }
+      .alert {
+       padding: 10px;
+       border-radius: 8px;
+       margin-top: 10px;
+       font-size: 14px;
+       text-align: center;
+      }
+
+      .alert.erro {
+       background-color: #f8d7da;
+       color: #721c24;
+       border: 1px solid #f5c6cb;
+      }
+
+      .alert.sucesso {
+       background-color: #d4edda;
+       color: #155724;
+       border: 1px solid #c3e6cb;
+      }
+
     }
   </style>
 </head>
@@ -168,6 +188,13 @@
     <main class="form">
       <h2>Seja bem-vindo!</h2>
       <h3>Entre em sua conta</h3>
+      {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+          {% for category, message in messages %}
+           <div class="alert {{ category }}">{{ message }}</div>
+         {% endfor %}
+        {% endif %}
+      {% endwith %}
       <form action="/login" method="POST">
         <div>
           <label>Email</label>
