--- a/templates/telaPrincipal.html
+++ b/templates/telaPrincipal.html
@@ -131,9 +131,9 @@
    <div class="sidebar" id="sidebar">
     <h2>Menu</h2>
     <a href="{{ url_for('configuracoes') }}">Configurações</a>
-    <a href="#">Avaliação</a>
-    <a href="#">Perfil</a>
-    <a href="#">Entidades</a>
+    <a href="{{ url_for('avaliacoes') }}">Avaliação</a>
+    <a href="{{ url_for('usuario') }}">Perfil</a>
+    <a href="{{ url_for('entindades') }}">Entidades</a>
   </div>
     <img src="" alt="">
     <h3>Bem-vindo</h3>
