--- a/templates/usuario.html
+++ b/templates/usuario.html
@@ -66,16 +66,20 @@
     <main>
         <div class="container">
             <img src="fotocolocadadeperfilnoinicio.jppg" alt="Foto do usuário" width="100" height="100">
-            <h2>Nome do Usuário</h2>
-            <p>Email: usuario@exemplo.com</p>
-            <p>Senha: xxxxxxxxxxxxxxxxx</p>
-            <h3>Informações Pessoais</h3>
-            <p>Telefone: (00) 00000-0000</p>
-            <p>Data de nascimento: 01/01/2000</p>
-            <p>Endereço: Rua Exemplo, 123 - Cidade/UF</p>
-            <button>Editar Perfil</button>
-            <button>Alterar Senha</button>
-            <button>Sair da Conta</button>
+            <h2>{{ usuario[0] }}</h2>
+            <p>Email: {{ usuario[1] }}</p>
+            <p>Senha: ******</p>
+            <p>Telefone: {{ usuario[4] }}</p>
+            <p>Data de nascimento: {{ usuario[3] }}</p>
+            <form action="/editar" method="GET">
+                <button type="submit">Editar Perfil</button>
+            </form>
+            <form action="/alterar_senha" method="GET">
+                <button type="submit">Alterar Senha</button>
+            </form>
+            <form action="/logout" method="POST">
+             <button type="submit">Sair da Conta</button>
+            </form>
         </div>
     </main>
 </body>
