--- a/templates/telaPrincipal.html
+++ b/templates/telaPrincipal.html
@@ -130,10 +130,9 @@
   
   <div class="sidebar" id="sidebar">
     <h2>Menu</h2>
-    <a href="#">Meu Usuário</a>
-    <a href="#">Meu Histórico</a>
-    <a href="#">Configurações</a>
+    <a href="{{ url_for('configuracoes') }}">Configurações</a>
     <a href="#">Avaliação</a>
+    <a href="{{ url_for('usuario') }}">Perfil</a>
     <a href="#">Entidades</a>
   </div>
     <img src="" alt="">
