--- a/templates/telaPrincipal.html
+++ b/templates/telaPrincipal.html
@@ -134,6 +134,8 @@
     <a href="#">Avaliação</a>
     <a href="{{ url_for('usuario') }}">Perfil</a>
     <a href="#">Entidades</a>
+    <a href="{{ url_for('historico_de_ocorrencias') }}">Histórico de Ocorrências</a>
+    <a href="{{ url_for('logout') }}">Sair</a>
   </div>
     <img src="" alt="">
     <h3>Bem-vindo</h3>
