--- a/templates/cadastro.html
+++ b/templates/cadastro.html
@@ -214,9 +214,17 @@
           <input type="file" name="ind_back" required>
         </div>
 
+        <div>
+          <label>
+            <input type="checkbox" name="is_admin" style="margin-right: 8px;">
+            Criar como Administrador
+          </label>
+        </div>
+
         <div class="cadastro">
           <button type="submit">Cadastrar</button>
         </div>
+
       </form>
     </main>
 
